--- a/index.html
+++ b/index.html
@@ -51,27 +51,51 @@
           color: hsl(228, 45%, 44%);
         }
           .deep-earth{
+            /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size:cover !important; */
           background: url(./images/mobile/image-deep-earth.jpg);
         }
         .night-arcade{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-night-arcade.jpg);
         }
         .soccer-team{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-soccer-team.jpg);
         }
         .the-grid{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-grid.jpg);
         }
         .above{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-from-above.jpg);
         }
         .pocket{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size:cover !important; */
           background: url(./images/mobile/image-pocket-borealis.jpg);
         }
         .curiosity{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-curiosity.jpg);
         }
         .fisheye{
+          /* background-repeat: no-repeat !important;
+          border: 1px solid red !important;
+          background-size: cover !important; */
           background: url(./images/mobile/image-fisheye.jpg);
         }
     </style>
@@ -123,28 +147,28 @@
             <div class="h-48 pl-5 mb-8 deep-earth bg-center bg-cover bg-no-repeat">
               <h2 class="uppercase  text-3xl mt-16">Deep <br> earth</h2>
             </div>
-            <div class="h-48 pl-5 mb-8 night-arcade bg-cover bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 night-arcade bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">night <br> arcade</h2>
             </div>
-            <div class="h-48 pl-5 mb-8 soccer-team bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 soccer-team bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">soccer <br> team vr</h2>
             </div>
-            <div class="h-48 pl-5 mb-8 the-grid bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 the-grid bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16 ">the <br> grid</h2>
             </div>
-            <div class="h-48 pl-5 mb-8 above bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 above bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">
                 from up <br />
                 above vr
               </h2>
             </div>
-            <div class="h-48 pl-5 mb-8 pocket bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 pocket bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">pocket <br> borealis</h2>
             </div>
-            <div class="h-48 pl-5 mb-8 curiosity bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-8 curiosity bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">the <br> curiosity</h2>
             </div>
-            <div class="h-48 pl-5 mb-3 fisheye bg-center bg-no-repeat">
+            <div class="h-48 pl-5 mb-3 fisheye bg-center bg-cover  bg-no-repeat">
               <h2 class="uppercase text-3xl mt-16">make it <br> fisheye</h2>
             </div>
             <div class="flex justify-center">
